[package]
name = "clipygo-plugin-obsidian"
version = "0.1.0"
edition = "2021"
description = "Obsidian vault plugin for clipygo"
authors = ["Georg Nelles"]
license = "MIT"
repository = "https://github.com/it-atelier-gn/clipygo-plugin-obsidian"

[[bin]]
name = "clipygo-plugin-obsidian"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
